src/test/deca/syntax/invalid/lexer/test_ident_special_caractere.deca
// Description:
//    test de programme incorrect lexicalement (Caractère sans TOKEN correspondant)
//
// Resultats:
//    ligne 10 : Erreur, il faut "E" ou "e"
//
// Historique:
//    cree le 05/01/2023

&